Secure backend by route, implemts xsrf token